AUTOMAKE_OPTIONS=foreign
noinst_LTLIBRARIES=libLoginServershared.la
libLoginServershared_la_CXXFLAGS=-I$(srcdir)/../$(platform) \
	-I$(archive_dir)/include \
	-I$(unicode_dir)/include \
	-I$(localization_dir)/include \
	-I$(engine_dir)/shared/library/sharedCommandParser/include/public \
	-I$(engine_dir)/shared/library/sharedCompression/include/public \
	-I$(engine_dir)/shared/library/sharedDatabaseInterface/include/public \
	-I$(engine_dir)/shared/library/sharedDebug/include/public \
	-I$(engine_dir)/shared/library/sharedFile/include/public \
	-I$(engine_dir)/shared/library/sharedFoundationTypes/include/public \
	-I$(engine_dir)/shared/library/sharedFoundation/include/public \
	-I$(engine_dir)/shared/library/sharedGame/include/public \
	-I$(engine_dir)/shared/library/sharedLog/include/public \
	-I$(engine_dir)/shared/library/sharedMath/include/public \
	-I$(engine_dir)/shared/library/sharedMathArchive/include/public \
	-I$(engine_dir)/shared/library/sharedMemoryManager/include/public \
	-I$(engine_dir)/shared/library/sharedMessageDispatch/include/public \
	-I$(engine_dir)/shared/library/sharedNetwork/include/public \
	-I$(engine_dir)/shared/library/sharedNetworkMessages/include/public \
	-I$(engine_dir)/shared/library/sharedObject/include/public \
	-I$(engine_dir)/shared/library/sharedRandom/include/public \
	-I$(engine_dir)/shared/library/sharedRegex/include/public \
	-I$(engine_dir)/shared/library/sharedSynchronization/include/public \
	-I$(engine_dir)/shared/library/sharedTemplate/include/public \
	-I$(engine_dir)/shared/library/sharedThread/include/public \
	-I$(engine_dir)/shared/library/sharedUtility/include/public \
	-I$(stlport_dir)/stlport \
	-I$(perforce_dir)/include \
	-I$(platform_dir)/projects \
	-I$(platform_dir) \
	-I$(udplibrary_dir) \
	-I$(soePlatform_dir)/ChatAPI2/ChatAPI/utils/ \
	-I$(soePlatform_dir)/ChatAPI2/ChatAPI/projects/Chat \
	-I$(platform_dir)/include \
	-I$(singleton_dir)/include \
	-I$(unicodeArchive_dir)/include/public \
	-I$(localizationArchive_dir)/include/public \
	-I$(engine_dir)/server/library/serverKeyShare/include/public \
	-I$(engine_dir)/server/library/serverMetrics/include/public \
	-I$(engine_dir)/server/library/serverNetworkMessages/include/public \
	-I$(engine_dir)/server/library/serverUtility/include/public \
	-Wno-ctor-dtor-privacy -DMonitorAPI=
libLoginServershared_la_SOURCES = \
	CentralServerConnection.cpp \
	CentralServerConnection.h \
	ClientConnection.cpp \
	ClientConnection.h \
	ConfigLoginServer.cpp \
	ConfigLoginServer.h \
	ConsoleCommandParser.cpp \
	ConsoleCommandParser.h \
	ConsoleCommandParserLoginServer.cpp \
	ConsoleCommandParserLoginServer.h \
	ConsoleManager.cpp \
	ConsoleManager.h \
	CSToolConnection.cpp \
	CSToolConnection.h \
	DatabaseConnection.cpp \
	DatabaseConnection.h \
	FirstLoginServer.h \
	LoginServer.cpp \
	LoginServer.h \
	LoginServerRemoteDebugConnection.cpp \
	LoginServerRemoteDebugConnection.h \
	LoginServerRemoteDebugSetup.cpp \
	LoginServerRemoteDebugSetup.h \
	PingConnection.cpp \
	PingConnection.h \
	PurgeManager.cpp \
	PurgeManager.h \
	SessionApiClient.cpp \
	SessionApiClient.h \
	TaskChangeStationId.cpp \
	TaskChangeStationId.h \
	TaskClaimRewards.cpp \
	TaskClaimRewards.h \
	TaskCreateCharacter.cpp \
	TaskCreateCharacter.h \
	TaskDeleteCharacter.cpp \
	TaskDeleteCharacter.h \
	TaskEnableCharacter.cpp \
	TaskEnableCharacter.h \
	TaskGetAccountForPurge.cpp \
	TaskGetAccountForPurge.h \
	TaskGetAvatarList.cpp \
	TaskGetAvatarList.h \
	TaskGetCharactersForDelete.cpp \
	TaskGetCharactersForDelete.h \
	TaskGetClusterList.cpp \
	TaskGetClusterList.h \
	TaskGetValidationData.cpp \
	TaskGetValidationData.h \
	TaskRegisterNewCluster.cpp \
	TaskRegisterNewCluster.h \
	TaskRenameCharacter.cpp \
	TaskRenameCharacter.h \
	TaskRestoreCharacter.cpp \
	TaskRestoreCharacter.h \
	TaskSetPurgeStatus.cpp \
	TaskSetPurgeStatus.h \
	TaskToggleCharacterDisable.cpp \
	TaskToggleCharacterDisable.h \
	TaskToggleCompletedTutorial.cpp \
	TaskToggleCompletedTutorial.h \
	TaskUpdatePurgeAccountList.cpp \
	TaskUpdatePurgeAccountList.h \
	TaskUpgradeAccount.cpp \
	TaskUpgradeAccount.h

include $(engine_dir)/../make_include/engine.include
